--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,53 @@ body {
   font-size: 50px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
-.first-body-content-one-one-one p {
+.readmore-up {
   padding-left: 180px;
   color: #555;
   margin: 20px;
-  line-height: 1.5;
+  line-height: 2;
   margin-top: 40px;
+}
+.readmore {
+  color: white;
+  background-color: #df4516;
+  margin-left: 200px;
+  padding-left: 30px;
+  padding-right: 20px;
+  width: 120px;
+  margin-top: 30px;
+  letter-spacing: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: bold;
+  font-size: small;
+}
+.side-body {
+  background-color: #011324;
+  height: 601px;
+  margin-left: 25px;
+  color: white;
+  width: 100%;
+}
+.side-body-header {
+  margin: 25px;
+  font-weight: 600;
+  font-size: 40px;
+  color: rgb(255, 190, 0);
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.side-body-content {
+  margin-top: 0;
+  padding-top: 0;
+  padding: 25px;
+}
+.side-body-content h2 {
+  padding-top: 0px;
+  font-size: 22px;
+}
+.side-body-content p {
+  font-size: 16px;
+  border-bottom: 1px solid rgba(204, 204, 204, 0.5);
+  padding-bottom: 40px;
 }
